# BagInCoffee

./: CONTRIBUTING.md  LICENSE  README.md
BagInCoffee-App/: .env.example  .gitignore  CONTRIBUTING.md  README.md  pubspec.yaml
BagInCoffee-Web/: .env.example  .gitignore  CHECK_PROFILES_TABLE.sql  CLOUDFLARE_R2_SETUP.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  LICENSE  PERFORMANCE.md  PSEUDOCODE.md  README.md  README_OPTIMIZATION.md  SECURITY.md  SECURITY_UPDATES.md  SETUP_PROFILE_IMAGES_STORAGE.sql  SUPABASE_AUTH_FIX.md  SVELTE5_REVIEW.md  fix-session-user.sh  package-lock.json  package.json  svelte.config.js  tsconfig.json  vercel.json  (+1 more)
BagInDB/: .dockerignore  .env.example  .gitignore  ADMIN_SETUP_GUIDE.md  CONTRIBUTING.md  Cargo.toml  DB_SCHEMA.md  DB_STRUCTURE.md  DEPLOYMENT.md  Dockerfile  JSONB_FILTER_GUIDE.md  LICENSE  README.md  SUPABASE_SETUP.md  railway.json
BagInDB/src/: main.rs
BagInDB/src/cache/: mod.rs
BagInDB/src/db/: pool.rs
BagInDB/src/handlers/: brand_handler.rs  cache_handler.rs  mod.rs  product_category_handler.rs  product_handler.rs  product_pricing_handler.rs
BagInDB/src/middleware/: auth.rs  mod.rs
BagInDB/src/models/: brand.rs  mod.rs  product.rs  product_category.rs  product_pricing.rs
BagInDB/src/routes/: mod.rs
BagInDB/supabase/: config.toml  seed.sql
BagInDB/supabase/migrations/: 20250104000001_initial_schema.sql  20250104000002_spec_tables.sql  20250104000003_rls_policies.sql  20250104000004_storage_setup.sql  20250109000002_add_product_pricing.sql  20250111000001_add_profiles_and_admin_policies.sql
(+243 files in other folders)
