[package]
name = "bag_in_db"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database - SQLx with optimizations
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
    "rust_decimal"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
rust_decimal = { version = "1.33", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# JWT Authentication
jsonwebtoken = "9.0"

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
